resource : 로고 및 아바타 이미지 추가

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -12,6 +12,21 @@
     font-style: normal;
     box-sizing: border-box;
 }
+/* related width */
+.w-50 {
+    width: 50%;
+}
+.w-100 {
+    width: 100%;
+}
+
+/* related index page*/
+.main {
+    display: flex;
+    max-width: 1000px;
+    margin: auto;
+    align-items: center;
+}
 body{
     margin: 0;
 }
