--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,18 +1,33 @@
 
-
+<!-- related global css -->
 @font-face {
-    font-family: 'SinchonRhapsody';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2503@1.0/SinchonRhapsody.woff2') format('woff2');
-    font-weight: normal;
+    font-family: 'ChosunGu';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ChosunGu.woff') format('woff');
+    font-weight: 200;
     font-style: normal;
 }
-*{
-    font-family: "SinchonRhapsody",cursive;
-    font-weight: 400;
-    font-style: normal;
+
+* {
+    font-family: 'ChosunGu';
+    font-weight: 200;
     box-sizing: border-box;
+    color : #444;
 }
-/* related width */
+b {
+    font-weight: bold;
+}
+a {
+    text-decoration: none;
+    color : black;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+body {
+    margin: 0;
+}
+
 .w-50 {
     width: 50%;
 }
@@ -20,13 +35,79 @@
     width: 100%;
 }
 
-/* related index page*/
-.main {
+
+/* related index page -----------------------------------*/
+.index-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+}
+.index-header div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap : 20px;
+}
+.index-header a {
+    font-size : 0.85em;
+}
+.index-header button {
+    background-color: #333;
+    color: #eee;
+    padding : 8px 30px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size : 0.95em;
+}
+.index-header button:hover {
+    background-color: #eee;
+    color: #333;
+
+}
+.index-main {
     display: flex;
     max-width: 1000px;
     margin: auto;
     align-items: center;
 }
-body{
-    margin: 0;
+
+
+/* related auth page -------------------------------------------------------- */
+.auth-header {
+
+    padding : 15px;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,.08);
+    text-align: center;
+}
+.auth-main {
+    max-width: 400px;
+    padding : 0px 15px;
+    margin : 70px auto;
+    text-align: center;
+}
+.auth-input-div {
+    padding : 10px 0px;
+    margin-top : 20px;
+    border-bottom: 1px solid rgba(0,0,0,.08);
+}
+.auth-input {
+    width:100%;
+    height: 36px;
+    border : 0;
+    font-size : 1.5em;
+}
+.auth-input:focus {
+    outline: none;
+}
+.album {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.album-item {
+    width: calc((95%)/3);
+    height: 100px;
+    margin-bottom: 20px;
+    border : 1px solid rgba(0,0,0,.08);
 }
